fixed overflow issue

--- a/src/components/pages/RecipePage.css
+++ b/src/components/pages/RecipePage.css
@@ -1,3 +1,7 @@
+div.border {
+  scrollbar-width: thin;
+}
+
 .recipe-page-cont {
   margin-top: -45px;
 }
